# BinaryDataConverter

./: .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake
files/: packAll.bat  unpackAll.bat
files/structureFiles/: DBBattleData.json  DBBuffData.json  DBCharData.json  DBDebugUnitListData.json  DBDiaryData.json  DBEquipData.json  DBEventData.json  DBEvoData.json  DBExpData.json  DBFreeEvoData.json  DBItemData.json  DBMapBossData.json  DBMapData.json  DBMapLoadData.json  DBMapUnitDistDofData.json  DBObjectData.json  DBPartnerTalkData.json  DBPartnerTalkTextData.json  DBSkillData.json  DBTalkData.json  DBUnitData.json
files/userFiles/: DELETE_ME
src/: BinaryChannel.cpp  BinaryChannel.hpp  BinaryDataConverter.cpp  CSVChannel.cpp  CSVChannel.hpp  Channel.hpp  ReadWriter.hpp  SurviveChannel.cpp  SurviveChannel.hpp
